Rollback PRs intended for 4.8.x (#2882)